# LearnOpenGL

./: CMakeLists.txt  README.md  main.cpp
demo/: AssimpDemo.h  Colors.h  Draw3D.h  Draw3D_Demo.h  DrawShape.h  RenderLight.h  RenderText.h  TestFilter1.h  TestFilter1_ECS.h
docs/: SCENE_SYSTEM.md
res/shader/: CharacterShader.fs  CharacterShader.vs  CharacterShaderSDF.fs  CharacterShaderSmooth.fs  fba.fs  fba.vs  light_shader.vs  shader.fs  shader.vs  test.fs  test.vs
res/shader/cube/: shader.fs  shader.vs
src/: Camera.h  FrameBuffer.h  MTFilter.cpp  MTFilter.h  MTFilterManager.h  Mesh.h  Model.h  Object.h  Shader.cpp  Shader.h  Texture.h  main.cpp
src/Core/: Application.cpp  Application.h  Renderer.cpp  Renderer.h
src/Resources/: FrameBuffer.h  Geometry.cpp  Geometry.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.h
src/Scene/: CameraComponent.cpp  CameraComponent.h  Component.h  Entity.cpp  Entity.h  MeshRenderer.cpp  MeshRenderer.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
src/Shader/: GLBuffer.h
src/Utils/: Camera.h  MMath.h
utils/: Camera.h  FrameBuffer.h  Light.h  MTFilter.h  Mesh.h  Model.h  Object.h  Rectangle.h  Shader.h  Shader_old.h  Texture.h
